# freehttpd

./: .clang-format  .clang-tidy  .dir-locals.el  .editorconfig  .gitignore  .noticerc  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  README.org  TODO  bootstrap  configure.ac
.github/: cra-metadata.json  version.json
.github/workflows/: build.yml  codeql.yml
build-aux/: .gitignore  git-version-gen  org-doc-gen  update-license-comments  valgrind
conf/: .gitignore  Makefile.am  fhttpd.conf  fhttpd.conf.in
conf/conf.d/: logging.conf  ports.conf  security.conf
conf/hosts.d/: example.com.conf  localhost.conf
doc/: .gitignore  Makefile.am  command-line.org  common-config.org  faq.org  getting-started.org  gfdl.org  index.org  licensing.org  managing-the-daemon.org  manual.html  manual.info  manual.texi
doc/introduction/: getting-started.org  gfdl.org  licensing.org
doc/invoking/: command-line.org  managing-the-daemon.org
m4/: compiler.m4  features.m4  gnulib-cache.m4  options.m4  programs.m4  utils.m4
man/: Makefile.am  freehttpd.8
res/: .gitignore  Makefile  Makefile.am  NOTICE  error.html  index.html  index_end.html  index_start.html  resources.c  resources.h
src/: .gitignore  Makefile  Makefile.am  autoindex.c  autoindex.h  base64.c  base64.h  bitmap.c  bitmap.h  bitstream.c  bitstream.h  buffer.c  buffer.h  compat.h  conf.c  conf.h  connection.c  connection.h  error.h  fhttpd.c  freehttpd.c  h2.c  h2.h  htable.c  htable.h  http1.c  http1.h  http11.c  http11.h  itable.c  itable.h  list.c  list.h  log.c  log.h  loop.h  lstring.c  lstring.h  master.c  master.h  (+15 more)
src/core/: Makefile.am  buffer.c  buffer.h  conf.c  conf.h  confproc.c  confproc.h  conn.c  conn.h  connection.c  connection.h  master.c  master.h  module.c  module.h  server.c  server.h  stream.c  stream.h  worker.c  worker.h
src/digest/: Makefile.am  base64.c  base64.h
src/event/: Makefile.am  accept.c  accept.h  recv.c  recv.h  send.c  send.h  xpoll.c  xpoll.h
src/hash/: .gitignore  Makefile.am  itable.c  itable.h  strtable.c  strtable.h
src/http/: Makefile.am  buffer.h  h2.c  h2.h  http1.c  http1.h  http1_request.c  http1_request.h  http1_response.c  http1_response.h  protocol.c  protocol.h  stream.c  stream.h
src/include/: Makefile.am  compat.h  macros.h  types.h
src/log/: Makefile.am  log.c  log.h
src/mm/: Makefile.am  pool.c  pool.h
src/modules/: Makefile.am  autoindex.c  autoindex.h  mod_autoindex.c  mod_autoindex.h  mod_foo.c  module.c  module.h
src/router/: Makefile.am  filesystem.c  filesystem.h  router.c  router.h
src/utils/: Makefile.am  base64.c  base64.h  bitmap.c  bitmap.h  calc.c  calc.h  datetime.c  datetime.h  itable.h  path.c  path.h  print.c  print.h  strtable.c  strtable.h  strutils.c  strutils.h  utils.c  utils.h
systemd/: .gitignore  Makefile.am  freehttpd.service  freehttpd.service.in
tests/: Makefile  Makefile.am  base64.test  base64.test.c  benchmark.sh  bitmap.test  htable_test.c  itable.test  itable.test.c  itable_test  list_test.c  path.test  path.test.c  path_normalize_test.c  pool.test  pool.test.c  strtable.test  strtable.test.c  test_base64  test_bitmap  test_bitmap.c  test_bitstream.c  test_itable  test_itable.c  test_utils  test_utils.c  utils.test  utils.test.c  valgrind-benchmark.sh  valgrind.sh
